# Prifacie--Mac-

./: License  README.md
Builds/build-prod-arm64/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  install_manifest.txt
Builds/build-prod-arm64/PriFacie.app/Contents/Resources/: PriFacie.icns
Builds/dist-prod-arm64-20260316/PriFacie.app/Contents/: Info.plist
Builds/dist-prod-arm64-20260316/PriFacie.app/Contents/MacOS/: PriFacie
Source/: .gitignore  CMakeLists.txt  HARDENING_AUDIT.md  README.md  THIRD_PARTY.md
Source/src/: browser_data_store.cpp  browser_data_store.h  browser_window.h  browser_window_mac.mm  credential_store.cpp  credential_store.h  crypto_utils.cpp  crypto_utils.h  engine_adapter_mac.h  engine_adapter_mac.mm  main.mm  profile_store.cpp  profile_store.h
